# nrt_rainfall_pipeline

./: .env.template  .gitignore  Dockerfile  README.md  nrt_rainfall_pipeline.py  pyproject.toml
.github/workflows/: update-image-dev.yaml
config/: config.yaml
nrt_rainfall_pipeline/: extract.py  load.py  pipeline.py  secrets_settings.py  settings.py  transform.py
